--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -144,7 +144,7 @@
 		<key>Debug</key>
 		<false/>
 		<key>DefaultVolume</key>
-		<string>Macintosh HD</string>
+		<string>Hackintosh OS</string>
 		<key>Fast</key>
 		<false/>
 		<key>IgnoreNVRAMBoot</key>
